# FlashscoreScraper

./: .gitignore  README.md  main.py  models.py  pyproject.toml
engines/: base_engine.py  curl_engine.py  engine_factory.py  playwright_engine.py
models/: base_event_info.py  base_odds.py  event_data.py  event_info_data.py  fetch_odds_response.py  odds_filter.py  odds_parser_result.py  odds_parser_row.py  odds_result.py  parse_text_element_params.py  sports.py
models/event_info/: event_info_factory.py  football_event_info.py
models/odds/: football_odds.py  odds_factory.py
odds/: football_odds.py  odds_factory.py
parsers/: __init__.py  base_odds_parser.py  base_parser.py  football_parser.py  parser_factory.py
parsers/football/: __init__.py  football_event_info_parser.py  football_event_parser.py  football_parser.py
parsers/football/odds/: asian_handicap.py  btts.py  correct_score.py  double_chance.py  draw_no_bet.py  european_handicap.py  ht_ft.py  odd_even.py  one_x_two.py  over-under.py
scraper/: scraper_factory.py  scraper_service.py
tests/fixtures/: _fixture_helpers.py  save_draw.py  save_fixture.py  save_odds_fixture.py  save_standings.py
tests/parsers/: conftest.py  soup_helpers.py
tests/parsers/football/: test_football_event.py  test_football_event_info.py  test_football_odds.py
utils/: detect_sport.py  json_formatter.py  url_builder.py
