[project]
name = "flashscorescrapper"
version = "0.1.0"
description = "Flashscore Scrapper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "playwright>=1.58.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["engines", "models", "parsers", "scraper", "utils"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
